--- a/style.css
+++ b/style.css
@@ -387,8 +387,8 @@ display: none;
   object-fit: cover;
   margin: 0 auto 20px;
 }
-.rounded-circle{
-  width: 180px;
-  object-fit: cover;
-  margin: 0 auto 20px;
+.map-container {
+  height: 400px;
+  width: 100%;
+  margin-bottom: 20px;
 }
