--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ display: none; /* Hidden by default */
 background: transparent;
 border: none;
 font-size: 1.5rem; /* Adjust size as needed */
-color: #dbe2e8; /* Color of the icon */
+color: #141516; /* Color of the icon */
 position: absolute;
 top: 10px; /* Adjust top position */
 right: 10px; /* Adjust right position */
