--- a/result.css
+++ b/result.css
@@ -151,7 +151,7 @@ td, th {
     background: transparent;
     border: none;
     font-size: 1.5rem; /* Adjust size as needed */
-    color: #dbe2e8; /* Color of the icon */
+    color: #121314; /* Color of the icon */
     position: absolute;
     top: 10px; /* Adjust top position */
     right: 10px; /* Adjust right position */
