--- a/staff_management.css
+++ b/staff_management.css
@@ -113,10 +113,10 @@
 /* Cancel button styles */
 .cancel-btn {
     display: none; /* Hidden by default */
-    background: transparent;
+    background: darkgray;
     border: none;
     font-size: 1.5rem; /* Adjust size as needed */
-    color: #dbe2e8; /* Color of the icon */
+    color: #0f0f10; /* Color of the icon */
     position: absolute;
     top: 10px; /* Adjust top position */
     right: 10px; /* Adjust right position */
