--- a/dashboard.css
+++ b/dashboard.css
@@ -121,10 +121,10 @@
 /* Cancel button styles */
 .cancel-btn {
   display: none; /* Hidden by default */
-  background: transparent;
+  background: darkgray;
   border: none;
   font-size: 1.5rem; /* Adjust size as needed */
-  color: #dbe2e8; /* Color of the icon */
+  color: #18191a; /* Color of the icon */
   position: absolute;
   top: 10px; /* Adjust top position */
   right: 10px; /* Adjust right position */
