--- a/view.css
+++ b/view.css
@@ -234,7 +234,7 @@ background-color: #555;
 }
 /* Styling for the links and hover effects */
 .view-link, .download-link {
-color: #99a0a6;
+color: #479ae2;
 text-decoration: none;
 font-weight: bold;
 margin-left: 10px; /* Adds space between the student's name and the links */
